--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -71,8 +71,7 @@
   <h2>Fonctionnalités</h2>
 
   <tc-feature-list
-    features="ctrl.features"
-    on-features-filtered="ctrl.updateFeatureIds(featureIds)">
+    features="ctrl.features">
   </tc-feature-list>
 
   <!-- Scénarii -->
