--- a/zucchini-ui-frontend/app/views/scenario.html
+++ b/zucchini-ui-frontend/app/views/scenario.html
@@ -41,21 +41,6 @@
     <tc-tags test-run-id="ctrl.scenario.testRunId" tags="ctrl.scenario.allTags"></tc-tags>
   </p>
 
-  <!-- FIXME Presence ! -->
-  <p style="color: red" ng-if="otherWatchers.length > 0">
-    <b>
-      <ng-pluralize count="otherWatchers.length"
-                    when="{ 'one': 'Une autre personne est', 'other': '{} autres personnes sont'}">
-      </ng-pluralize>
-      en train de regarder ce test.
-    </b>
-  </p>
-  <p style="color: green" ng-if="otherWatchers.length == 0">
-    <b>
-      Vous êtes le seul à regarder ce test.
-    </b>
-  </p>
-
   <hr>
 
   <div class="btn-toolbar" role="toolbar">
@@ -101,6 +86,23 @@
 
     </div>
   </div>
+
+
+  <hr>
+
+  <!-- Présence -->
+
+  <p ng-if="!ctrl.presence.known" class="bg-warning">
+    Présence d'utilisateurs en simultané inconnue
+  </p>
+
+  <p ng-if="ctrl.presence.known" ng-class="ctrl.presence.otherWatchers.length > 0 ? 'bg-warning': 'bg-success'">
+    <ng-pluralize count="ctrl.presence.otherWatchers.length"
+                  when="{ '0': 'Personne n\'est en train de regarder ce test en même temps',
+                          'one': 'Une autre personne est en train de regarder ce test.',
+                          'other': '{} autres personnes sont en train de regarder ce test.'}">
+    </ng-pluralize>
+  </p>
 
   <hr>
 
