--- a/zucchini-ui-frontend/app/views/tc-feature-list.html
+++ b/zucchini-ui-frontend/app/views/tc-feature-list.html
@@ -25,6 +25,10 @@
           <input type="checkbox" ng-model="$ctrl.filters.reviewed" ng-change="$ctrl.onFilterChange()">
           Analysées
         </label>
+        <label class="checkbox-inline">
+          <input type="checkbox" ng-model="$ctrl.filters.notReviewed" ng-change="$ctrl.onFilterChange()">
+          Non analysées
+        </label>
       </div>
     </div>
 
