--- a/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
+++ b/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
@@ -1,23 +1,11 @@
 <!-- Pie char -->
-<tc-pie-chart
-  data="$ctrl.series"
-  total="$ctrl.stats.all.count"
-  uib-popover-template="'scenarioProgessPopover.html'"
-  popover-placement="bottom"
-  popover-trigger="mouseenter"
-  popover-title="Statistiques détaillées">
-</tc-pie-chart>
+<div style="height: 20rem">
+  <tc-pie-chart
+    data="$ctrl.series"
+    total="$ctrl.stats.all.count">
+  </tc-pie-chart>
+</div>
 
-
-<!-- Popup for detailed information about stats -->
-<script type="text/ng-template" id="scenarioProgessPopover.html">
-
-  <ul class="list-unstyled">
-    <li><b>Total :</b> {{ $ctrl.stats[$ctrl.kind].count }}</li>
-    <li><b>Succès :</b> {{ $ctrl.stats[$ctrl.kind].passed }}</li>
-    <li><b>En attente :</b> {{ $ctrl.stats[$ctrl.kind].pending }}</li>
-    <li><b>Échecs :</b> {{ $ctrl.stats[$ctrl.kind].failed }}</li>
-    <li><b>Non joués :</b> {{ $ctrl.stats[$ctrl.kind].notRun }}</li>
-  </ul>
-
-</script>
+<div style="margin-top: 20px">
+  <tc-stats-legend stats="$ctrl.stats[$ctrl.kind]"></tc-stats-legend>
+</div>
