--- a/zucchini-ui-frontend/app/views/tc-stats-dashboard.html
+++ b/zucchini-ui-frontend/app/views/tc-stats-dashboard.html
@@ -2,22 +2,16 @@
 
   <div ng-if="$ctrl.stats.all.count > 0">
     <div class="col-md-4">
-      <p class="text-center">Tous les scénarii</p>
-      <div style="height: 20rem">
-        <tc-scenario-pie-chart stats="$ctrl.stats" kind="all"></tc-scenario-pie-chart>
-      </div>
+      <h5 class="text-center"><b>Tous les scénarii</b></h5>
+      <tc-scenario-pie-chart stats="$ctrl.stats" kind="all"></tc-scenario-pie-chart>
     </div>
     <div class="col-md-4">
-      <p class="text-center">Scénarii analysés</p>
-      <div style="height: 20rem">
-        <tc-scenario-pie-chart stats="$ctrl.stats" kind="reviewed"></tc-scenario-pie-chart>
-      </div>
+      <h5 class="text-center"><b>Scénarii analysés</b></h5>
+      <tc-scenario-pie-chart stats="$ctrl.stats" kind="reviewed"></tc-scenario-pie-chart>
     </div>
     <div class="col-md-4">
-      <p class="text-center">Scénarii non analysés</p>
-      <div style="height: 20rem">
-        <tc-scenario-pie-chart stats="$ctrl.stats" kind="nonReviewed"></tc-scenario-pie-chart>
-      </div>
+      <h5 class="text-center"><b>Scénarii non analysés</b></h5>
+      <tc-scenario-pie-chart stats="$ctrl.stats" kind="nonReviewed"></tc-scenario-pie-chart>
     </div>
   </div>
 
