Fix total count

--- a/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
+++ b/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
@@ -6,6 +6,7 @@
   </tc-pie-chart>
 </div>
 
+<!-- Legend -->
 <div style="margin-top: 20px">
   <tc-stats-legend stats="$ctrl.stats[$ctrl.kind]"></tc-stats-legend>
 </div>
