--- a/zucchini-ui-frontend/app/views/tc-stats-legend.html
+++ b/zucchini-ui-frontend/app/views/tc-stats-legend.html
@@ -35,7 +35,7 @@
   <tr class="stats-legend-total">
     <td>&nbsp;</td>
     <td>Total</td>
-    <td>{{ $ctrl.stats.passed }}</td>
+    <td>{{ $ctrl.stats.count }}</td>
     <td>{{ 100 * $ctrl.stats.count / $ctrl.stats.count | numberAsPercent }}</td>
   </tr>
   </tbody>
