--- a/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
+++ b/zucchini-ui-frontend/app/views/tc-scenario-pie-chart.html
@@ -1,12 +1,14 @@
 <!-- Pie char -->
-<div style="height: 20rem">
+<div ng-style="{ height: $ctrl.showDetails ? '20rem': '12rem' }">
   <tc-pie-chart
     data="$ctrl.series"
-    total="$ctrl.stats.all.count">
+    total="$ctrl.stats.all.count"
+    show-label="$ctrl.showDetails"
+    donut-width="$ctrl.showDetails ? 60: 30">
   </tc-pie-chart>
 </div>
 
 <!-- Legend -->
-<div style="margin-top: 20px">
+<div style="margin-top: 20px" ng-if="$ctrl.showDetails">
   <tc-stats-legend stats="$ctrl.stats[$ctrl.kind]"></tc-stats-legend>
 </div>
