Component for Glyphicons

--- a/zucchini-ui-frontend/app/views/feature.html
+++ b/zucchini-ui-frontend/app/views/feature.html
@@ -49,7 +49,7 @@
   <div class="btn-group" role="group">
 
     <button ng-click="ctrl.delete()" class="btn btn-danger">
-      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+      <tc-glyphicon name="remove"></tc-glyphicon>
       Supprimer
     </button>
 
