--- a/zucchini-ui-frontend/app/views/tc-stats-dashboard.html
+++ b/zucchini-ui-frontend/app/views/tc-stats-dashboard.html
@@ -4,11 +4,11 @@
 
     <p>
       <button class="btn btn-default btn-xs" ng-click="$ctrl.hide()" ng-if="$ctrl.showDetails">
-        <span class="glyphicon glyphicon-minus"></span>
+        <tc-glyphicon name="minus"></tc-glyphicon>
         Masquer les détails
       </button>
       <button class="btn btn-default btn-xs" ng-click="$ctrl.show()" ng-if="!$ctrl.showDetails">
-        <span class="glyphicon glyphicon-plus"></span>
+        <tc-glyphicon name="plus"></tc-glyphicon>
         Afficher les détails
       </button>
     </p>
