--- a/zucchini-ui-frontend/app/views/test-run-tag.html
+++ b/zucchini-ui-frontend/app/views/test-run-tag.html
@@ -48,7 +48,7 @@
 
     <div class="col-xs-2">
       <button class="btn btn-default btn-sm btn-block" ng-click="ctrl.updateRouteForTags()">
-        <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+        <tc-glyphicon name="refresh"></tc-glyphicon>
         Actualiser
       </button>
     </div>
