--- a/zucchini-ui-frontend/app/views/test-run-tags.html
+++ b/zucchini-ui-frontend/app/views/test-run-tags.html
@@ -32,7 +32,7 @@
 
         <span class="input-group-btn">
           <button class="btn btn-default" type="button" ng-click="ctrl.clearTagsFilter()">
-            <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+            <tc-glyphicon name="remove-circle"></tc-glyphicon>
           </button>
         </span>
 
