--- a/zucchini-ui-frontend/app/views/test-runs.html
+++ b/zucchini-ui-frontend/app/views/test-runs.html
@@ -12,7 +12,7 @@
     <div class="btn-group" role="group">
 
       <button type="button" class="btn btn-default" ng-click="ctrl.openCreateForm()">
-        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+        <tc-glyphicon name="plus-sign"></tc-glyphicon>
         Créer un tir de tests
       </button>
 
