--- a/zucchini-ui-frontend/app/views/scenario.html
+++ b/zucchini-ui-frontend/app/views/scenario.html
@@ -52,7 +52,7 @@
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false">
-            <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
+            <tc-glyphicon name="flag"></tc-glyphicon>
             Modifier le statut
             <span class="caret"></span>
           </button>
@@ -70,11 +70,11 @@
           <button type="button" class="btn btn-default" ng-click="ctrl.changeReviewState(!ctrl.scenario.reviewed)"
                   ng-switch on="ctrl.scenario.reviewed">
         <span ng-switch-when="true">
-          <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+          <tc-glyphicon name="eye-close"></tc-glyphicon>
           Marquer comme non analysé
         </span>
         <span ng-switch-default>
-          <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+          <tc-glyphicon name="eye-open"></tc-glyphicon>
           Marquer comme analysé
         </span>
           </button>
@@ -83,7 +83,7 @@
         <div class="btn-group" role="group">
 
           <button ng-click="ctrl.delete()" class="btn btn-danger btn-default">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            <tc-glyphicon name="remove"></tc-glyphicon>
             Supprimer
           </button>
 
@@ -96,21 +96,21 @@
       <!-- Présence -->
 
       <p ng-if="!ctrl.presence.known" class="text-warning text-right">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <tc-glyphicon name="exclamation-sign"></tc-glyphicon>
         Présence d'utilisateurs en simultané inconnue
       </p>
 
       <div ng-if="ctrl.presence.known" ng-switch="ctrl.presence.otherWatchers.length">
         <p ng-switch-when="0" class="text-success text-right">
-          <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
+          <tc-glyphicon name="ok-sign"></tc-glyphicon>
           Vous êtes seul à regarder ce scénario.
         </p>
         <p ng-switch-when="1" class="text-warning text-right">
-          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <tc-glyphicon name="exclamation-sign"></tc-glyphicon>
           Une autre personne est en train de regarder ce scénario.
         </p>
         <p ng-switch-default class="text-warning text-right">
-          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <tc-glyphicon name="exclamation-sign"></tc-glyphicon>
           {{ ctrl.presence.otherWatchers.length }} autres personnes sont en train de regarder ce scénario.
         </p>
 
@@ -233,11 +233,11 @@
 
         <p>
           <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = true">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            <tc-glyphicon name="pencil"></tc-glyphicon>
             Modifier
           </button>
           <button type="button" class="btn btn-danger btn-xs" ng-click="commentsCtrl.deleteComment(comment)">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            <tc-glyphicon name="remove"></tc-glyphicon>
             Supprimer
           </button>
         </p>
