--- a/zucchini-ui-frontend/app/views/test-run.html
+++ b/zucchini-ui-frontend/app/views/test-run.html
@@ -24,7 +24,7 @@
     <div class="btn-group" role="group">
 
       <button ng-click="ctrl.openImportForm()" class="btn btn-default">
-        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+        <tc-glyphicon name="upload"></tc-glyphicon>
         Importer un résultat de tests Cucumber
       </button>
 
@@ -32,23 +32,23 @@
     <div class="btn-group" role="group">
 
       <button ng-click="ctrl.openUpdateTestRunForm()" class="btn btn-default">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-        Modifier les infos
+        <tc-glyphicon name="pencil"></tc-glyphicon>
+        Modifier
       </button>
 
     </div>
     <div class="btn-group" role="group">
 
       <a ng-href="#/test-runs/{{ ctrl.testRun.id }}/tags" class="btn btn-default">
-        <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
-        Statistiques par tag
+        <tc-glyphicon name="tags"></tc-glyphicon>
+        Tags
       </a>
 
     </div>
     <div class="btn-group" role="group">
 
       <a ng-href="#/test-runs/{{ ctrl.testRun.id }}/diff" class="btn btn-default">
-        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+        <tc-glyphicon name="list-alt"></tc-glyphicon>
         Comparer avec un autre tir
       </a>
 
@@ -56,7 +56,7 @@
     <div class="btn-group" role="group">
 
       <button ng-click="ctrl.delete()" class="btn btn-danger">
-        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <tc-glyphicon name="remove"></tc-glyphicon>
         Supprimer
       </button>
 
@@ -218,7 +218,7 @@
                 <button type="button" class="btn btn-sm btn-danger"
                         uib-tooltip="Supprimer" tooltip-placement="right"
                         ng-click="updateCtrl.deleteLabel($index)">
-                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                  <tc-glyphicon name="remove"></tc-glyphicon>
                 </button>
               </td>
 
@@ -230,7 +230,7 @@
                         uib-tooltip="Ajouter" tooltip-placement="right"
                         ng-disabled="newLabelForm.url.$invalid"
                         ng-click="updateCtrl.addNewLabel()">
-                  <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                  <tc-glyphicon name="plus-sign"></tc-glyphicon>
                   Ajouter une étiquette
                 </button>
               </td>
