--- a/zucchini-ui-frontend/app/views/test-runs.html
+++ b/zucchini-ui-frontend/app/views/test-runs.html
@@ -17,6 +17,14 @@
       </button>
 
     </div>
+    <div class="btn-group" role="group">
+
+      <button type="button" class="btn btn-default" ng-click="ctrl.openPurgeForm()">
+        <tc-glyphicon name="tree-deciduous"></tc-glyphicon>
+        Purger les anciens tirs
+      </button>
+
+    </div>
   </div>
 
   <hr>
