--- a/zucchini-ui-frontend/app/views/test-run.html
+++ b/zucchini-ui-frontend/app/views/test-run.html
@@ -82,6 +82,14 @@
   </tc-feature-list>
 
 
+  <!-- Trend -->
+
+  <hr>
+
+  <h2>Tendance</h2>
+
+  <tc-test-run-trend-chart history="ctrl.history" test-run-id="ctrl.testRun.id"></tc-test-run-trend-chart>
+
   <!-- History -->
 
   <hr>
