--- a/zucchini-ui-frontend/app/views/scenario.html
+++ b/zucchini-ui-frontend/app/views/scenario.html
@@ -392,6 +392,13 @@
         </label>
       </div>
 
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="ctrl.stepFilters.attachments" ng-change="ctrl.updateStoredStepFilters()">
+          Les pièces jointes
+        </label>
+      </div>
+
     </div>
 
   </script>
