--- a/zucchini-ui-frontend/app/views/tc-step.html
+++ b/zucchini-ui-frontend/app/views/tc-step.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <div class="panel panel-default" ng-if="$ctrl.step.attachments.length > 0">
+  <div class="panel panel-default" ng-if="$ctrl.filters.attachments && $ctrl.step.attachments.length > 0">
     <div class="panel-heading">
       <h6 class="panel-title">Pièces jointes</h6>
     </div>
