Grouping errors by code

--- a/zucchini-ui-frontend/app/views/scenario.html
+++ b/zucchini-ui-frontend/app/views/scenario.html
@@ -91,6 +91,7 @@
       </div>
 
     </div>
+
     <div class="col-md-5">
 
       <!-- Présence -->
@@ -174,6 +175,14 @@
   </div>
 
   <hr>
+
+  <!-- Tests en erreurs associés -->
+
+  <h2>Tests avec la même erreur</h2>
+
+  <div>
+    <tc-scenario-list scenarii="ctrl.associatedFailures"></tc-scenario-list>
+  </div>
 
   <!-- Comments -->
 
