Error Message Grouping Feature - Failures View - Adding a modal for full error message

--- a/zucchini-ui-frontend/src/main.less
+++ b/zucchini-ui-frontend/src/main.less
@@ -147,3 +147,8 @@
   transition: opacity linear 100ms;
   opacity: 0;
 }
+
+.error-message-modal-dialog {
+  max-width: 100%;
+  display: table;
+}
