Failures View - Minor CSS Changes

--- a/zucchini-ui-frontend/src/main.less
+++ b/zucchini-ui-frontend/src/main.less
@@ -149,6 +149,10 @@
 }
 
 .error-message-modal-dialog {
-  max-width: 100%;
-  display: table;
+  max-width: initial;
+}
+
+.error-message-modal-dialog pre {
+    overflow: auto;
+    white-space: pre-line;
 }
