Revert "Failures View - Minor CSS Changes"
This reverts commit bd04904986d2e56ab13fd0b12e9d8b1b20963e80.

--- a/zucchini-ui-frontend/src/main.less
+++ b/zucchini-ui-frontend/src/main.less
@@ -149,10 +149,6 @@
 }
 
 .error-message-modal-dialog {
-  max-width: initial;
-}
-
-.error-message-modal-dialog pre {
-    overflow: auto;
-    white-space: pre-line;
+  max-width: 100%;
+  display: table;
 }
