--- a/zucchini-ui-frontend/src/styles/main.less
+++ b/zucchini-ui-frontend/src/styles/main.less
@@ -148,7 +148,29 @@
   opacity: 0;
 }
 
-.error-message-modal-dialog {
-  max-width: 100%;
+.modal-dialog {
+  width: 90%;
   display: table;
+}
+
+.step-definition-location {
+  float: right;
+  font-size: 14px;
+  color: #39B54A;
+  margin-right: 1em;
+}
+
+.step-definition-variant {
+  display: block;
+}
+
+.step-definition-keyword {
+  font-weight: bold;
+  color: dodgerBlue;
+  margin-right: 0.5em;
+}
+
+.step-definition-argument {
+  font-weight: bold;
+  color: #FF8D1E;
 }
