Prettier on less stylesheets

--- a/zucchini-ui-frontend/src/styles/badges.less
+++ b/zucchini-ui-frontend/src/styles/badges.less
@@ -1,13 +1,13 @@
 @import "~bootstrap/less/badges.less";
 
 .badge-success:extend(.badge) {
-  background-color: @passed-color
+  background-color: @passed-color;
 }
 
 .badge-warning:extend(.badge) {
-  background-color: @pending-color
+  background-color: @pending-color;
 }
 
 .badge-error:extend(.badge) {
-  background-color: @failed-color
+  background-color: @failed-color;
 }
