--- a/zucchini-ui-frontend/src/styles/main.less
+++ b/zucchini-ui-frontend/src/styles/main.less
@@ -12,7 +12,6 @@
 @pending-color: @brand-warning;
 @not-run-color: #777;
 
-
 /**
  * Brower happy
  */
@@ -22,7 +21,6 @@
   color: #000;
   padding: 0.2em 0;
 }
-
 
 /**
  * Scenario pie charts
@@ -56,7 +54,6 @@
   font-size: 1em;
 }
 
-
 /**
  * Trends
  */
@@ -77,7 +74,6 @@
   stroke: @not-run-color;
 }
 
-
 /**
  * Stats legend
  */
@@ -85,7 +81,6 @@
 .stats-legend-total td {
   font-style: italic;
 }
-
 
 /**
  * Step error message
@@ -108,7 +103,6 @@
   padding: 0;
   margin: 0;
 }
-
 
 /**
  * Loading indicator
@@ -159,7 +153,7 @@
 .step-definition-location {
   float: right;
   font-size: 14px;
-  color: #39B54A;
+  color: #39b54a;
   margin-right: 1em;
 }
 
@@ -175,7 +169,7 @@
 
 .step-definition-argument {
   font-weight: bold;
-  color: #FF8D1E;
+  color: #ff8d1e;
 }
 
 .step-definition-variant-details {
