--- a/zucchini-ui-frontend/src/main.scss
+++ b/zucchini-ui-frontend/src/main.scss
@@ -1,1 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~chartist/dist/chartist.min.css";
+
+/**
+ * Brower happy
+ */
+ .browsehappy {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
