--- a/zucchini-ui-frontend/src/stats/components/StatsLegend.scss
+++ b/zucchini-ui-frontend/src/stats/components/StatsLegend.scss
@@ -1,5 +1,31 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
 .stats-legend {
-  &-total td {
+  &-total {
     font-style: italic;
+  }
+
+  &-sample {
+    $size: 1rem;
+
+    display: inline-block;
+    width: $size;
+    height: $size;
+
+    background-color: pink;
+  }
+
+  $sample-variants: (
+    success: $success,
+    danger: $danger,
+    warning: $warning,
+    dark: $dark
+  );
+
+  @each $variant, $color in $sample-variants {
+    &-sample-#{$variant} {
+      background-color: $color;
+    }
   }
 }
