Use Chartist SCSS file

--- a/zucchini-ui-frontend/src/main.scss
+++ b/zucchini-ui-frontend/src/main.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import "~chartist/dist/chartist.min.css";
+@import "~chartist/dist/scss/chartist";
 
 /**
  * Brower happy
